# ripxospeech

./: .gitignore  flake.nix  readme.md  ripxospeech.py  run_gui.sh  setup.py  teardown_pipewire_stream.sh
WindowsGstreamerServer/: Streamer.cpp  Streamer.sln
app/: app.py
code_server/: docker-compose.yml
keyboard_server/: doublethink.py  hid_backend.py  keycodes.py  serial_backend.py  serve.py  utils.py  virtual_backend.py
linux_gstreamer_client/: linux_gstreamer_client.py  stream.sh
linux_gstreamer_pipeline/: stream.sh
linux_gstreamer_server/: serve.py  serve.sh  serve_dest.sh  serve_main.sh  server_dest.sh
ocr_py_capture/: input.txt  requirements.txt  res  run.py  test_input.txt
ripxospeech_gtk/: README.md  default.nix  meson.build  org.ripxorip.ripxospeech_gtk.json  ripxospeech_gtk.cmb  ripxospeech_gtk.css  ripxospeech_gtk.py  ripxospeech_gtk_window.ui
ripxospeech_gtk/data/: meson.build  org.ripxorip.ripxospeech_gtk.desktop.in  org.ripxorip.ripxospeech_gtk.gschema.xml  org.ripxorip.ripxospeech_gtk.metainfo.xml.in
ripxospeech_gtk/data/icons/: meson.build
ripxospeech_gtk/po/: POTFILES  meson.build  ripxospeech_gtk.pot
ripxospeech_gtk/src/: main.c  meson.build  ripxospeech_gtk-application.c  ripxospeech_gtk-application.h  ripxospeech_gtk-window.c  ripxospeech_gtk-window.h  ripxospeech_gtk-window.ui  ripxospeech_gtk.gresource.xml
rt_audio_client/: Makefile  main.c
rt_audio_common/: stream_packet.h
rt_audio_gateway/: Makefile  flake.nix  main.c
rt_audio_gateway/inc/: rt_receiver.h  rt_ring_buffer.h
rt_audio_gateway/src/: main.c  rt_receiver.c  rt_ring_buffer.c
rt_audio_gateway/test/: Makefile  test_rt_reciever.c
scripts/: clipboard_from_udp.py  route.py  run.py  set_client.sh  setup_hid_gadget.sh  setup_pipewire_stream.sh
test/: audio_latency_test.flake  audio_latency_test.py  tests_serial_backend.py  virtual_server_events.py
usb_dongle/: CMakeLists.txt  app.c  app.h  cdc.c  cdc.h  flake.nix  hid.c  hid.h  main.c  tusb_config.h  usb.c  usb.h  usb_descriptors.c
usb_dongle/pico_openocd/: default.nix
usb_dongle/rp2040/: default.nix
usb_dongle_hw/: Library.kicad_sym  usb_dongle_hw.kicad_pcb  usb_dongle_hw.kicad_prl  usb_dongle_hw.kicad_pro  usb_dongle_hw.kicad_sch
usb_dongle_hw/3d/: plug-usbc-121smt-4bs2s.stp
usb_dongle_hw/Library.pretty/: PLUG-USBC-121SMT-4BS2S.kicad_mod  SON50P300X200X60-9N.kicad_mod
usb_dongle_hw/jlcpcb/: project.db
usb_dongle_hw/jlcpcb/gerber/: usb_dongle_hw-CuBottom.gbr  usb_dongle_hw-CuTop.gbr  usb_dongle_hw-EdgeCuts.gbr  usb_dongle_hw-MaskBottom.gbr  usb_dongle_hw-MaskTop.gbr  usb_dongle_hw-NPTH.drl  usb_dongle_hw-PTH.drl  usb_dongle_hw-PasteBottom.gbr  (+4 more)
utils/: constants.py  dongle_utils.py  identify_usb_soundcards.py  keyboard_server_api.py  tmux.py
virtual_keyboard/: Makefile  default.nix  virtual_keyboard.c
win11_keysender/: Form1.cs
win_gstreamer_server/: Streamer.vcxproj  Streamer.vcxproj.filters
win_pcm_audio_server/: Program.cs  win_pcm_audio_server.sln
x11_keysender/: main.c
